[gd_scene load_steps=2 format=3 uid="uid://inventory_screen"]

[ext_resource type="Script" path="res://scripts/screens/inventory_screen.gd" id="1_script"]

[node name="InventoryScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.92, 0.89, 0.82, 1)

[node name="Header" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 70.0
grow_horizontal = 2

[node name="HBox" type="HBoxContainer" parent="Header"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="BackButton" type="Button" parent="Header/HBox"]
custom_minimum_size = Vector2(60, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "‚Üê"

[node name="Title" type="Label" parent="Header/HBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 28
theme_override_colors/font_color = Color(0.4, 0.3, 0.2, 1)
text = "Inventory"
vertical_alignment = 1

[node name="CountLabel" type="Label" parent="Header/HBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
theme_override_colors/font_color = Color(0.5, 0.5, 0.5, 1)
text = "0 items"
vertical_alignment = 1

[node name="CategoryTabs" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 75.0
offset_bottom = 120.0
grow_horizontal = 2
theme_override_constants/separation = 5

[node name="AllTab" type="Button" parent="CategoryTabs"]
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
button_pressed = true
theme_override_font_sizes/font_size = 14
text = "All"

[node name="FoodTab" type="Button" parent="CategoryTabs"]
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
theme_override_font_sizes/font_size = 14
text = "Food"

[node name="FurnitureTab" type="Button" parent="CategoryTabs"]
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
theme_override_font_sizes/font_size = 14
text = "Furniture"

[node name="ClothesTab" type="Button" parent="CategoryTabs"]
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
theme_override_font_sizes/font_size = 14
text = "Clothes"

[node name="ItemsContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.15
anchor_right = 1.0
anchor_bottom = 0.85
offset_top = 5.0
offset_left = 10.0
offset_right = -10.0
grow_horizontal = 2
grow_vertical = 2

[node name="ItemsGrid" type="GridContainer" parent="ItemsContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10
columns = 4

[node name="EmptyLabel" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -20.0
offset_right = 100.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 18
theme_override_colors/font_color = Color(0.5, 0.5, 0.5, 1)
text = "No items yet!
Visit the shop to buy some."
horizontal_alignment = 1

[node name="ActionPanel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -120.0
grow_horizontal = 2
grow_vertical = 0

[node name="VBox" type="VBoxContainer" parent="ActionPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 15.0
offset_top = 10.0
offset_right = -15.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 8

[node name="ItemName" type="Label" parent="ActionPanel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Item Name"
horizontal_alignment = 1

[node name="HBox" type="HBoxContainer" parent="ActionPanel/VBox"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 15

[node name="UseButton" type="Button" parent="ActionPanel/VBox/HBox"]
custom_minimum_size = Vector2(100, 45)
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Use"

[node name="PlaceButton" type="Button" parent="ActionPanel/VBox/HBox"]
custom_minimum_size = Vector2(100, 45)
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Place"

[node name="SellButton" type="Button" parent="ActionPanel/VBox/HBox"]
custom_minimum_size = Vector2(100, 45)
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Sell"

[connection signal="pressed" from="Header/HBox/BackButton" to="." method="_on_back_pressed"]
[connection signal="pressed" from="CategoryTabs/AllTab" to="." method="_on_category_pressed" binds= [0]]
[connection signal="pressed" from="CategoryTabs/FoodTab" to="." method="_on_category_pressed" binds= [1]]
[connection signal="pressed" from="CategoryTabs/FurnitureTab" to="." method="_on_category_pressed" binds= [2]]
[connection signal="pressed" from="CategoryTabs/ClothesTab" to="." method="_on_category_pressed" binds= [3]]
[connection signal="pressed" from="ActionPanel/VBox/HBox/UseButton" to="." method="_on_use_pressed"]
[connection signal="pressed" from="ActionPanel/VBox/HBox/PlaceButton" to="." method="_on_place_pressed"]
[connection signal="pressed" from="ActionPanel/VBox/HBox/SellButton" to="." method="_on_sell_pressed"]

